--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       <section id="main_content">
         <h1 id="boogie-software-github--pages">Boogie Software github- pages</h1>
 
-<p>Welcome to Boogie Software</p>
+        <p>Welcome to Boogie Software</p>
 
-<p>Boogie Software Oy is a private Finnish software development and consultancy company headquartered in Oulu.</p>
+        <p>Boogie Software Oy is a private Finnish software development and consultancy company headquartered in Oulu.</p>
 
-<p>see more at https://boogiesoftware.com</p>
+        <p>see more at <a href="https://boogiesoftware.com">Boogie Software webpages</a></p>
 
       </section>
     </div>
